# FasterWhisper.NET

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  NOTICE  Qourex.FasterWhisper.slnx  README.md  README_GPU.md  SECURITY.md  build.ps1  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  pr-check.yml  publish-gpr.yml  release.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: advanced-features.md  api-reference.md  getting-started.md  mobile-deployment.md  samples.md
samples/: README.md
samples/Qourex.FasterWhisper.NET.Samples/: Program.cs  Qourex.FasterWhisper.NET.Samples.csproj
samples/Qourex.FasterWhisper.NET.Samples.AspNetCore.Cpu/: Program.cs  Qourex.FasterWhisper.NET.Samples.AspNetCore.Cpu.csproj
samples/Qourex.FasterWhisper.NET.Samples.AspNetCore.Gpu/: Program.cs  Qourex.FasterWhisper.NET.Samples.AspNetCore.Gpu.csproj
samples/Qourex.FasterWhisper.NET.Samples.Blazor.Cpu/: Program.cs  _Imports.razor
samples/Qourex.FasterWhisper.NET.Samples.Blazor.Cpu/Components/: Routes.razor
samples/Qourex.FasterWhisper.NET.Samples.Blazor.Cpu/Components/Layout/: MainLayout.razor  MainLayout.razor.css
samples/Qourex.FasterWhisper.NET.Samples.Blazor.Gpu/: Program.cs  _Imports.razor
samples/Qourex.FasterWhisper.NET.Samples.Blazor.Gpu/Components/: App.razor  Routes.razor
samples/Qourex.FasterWhisper.NET.Samples.Blazor.Gpu/Components/Layout/: MainLayout.razor
samples/Qourex.FasterWhisper.NET.Samples.Blazor.Gpu/Components/Pages/: Home.razor
samples/Qourex.FasterWhisper.NET.Samples.Console.Cpu/: Program.cs  Qourex.FasterWhisper.NET.Samples.Console.Cpu.csproj
samples/Qourex.FasterWhisper.NET.Samples.Console.Gpu/: Program.cs  Qourex.FasterWhisper.NET.Samples.Console.Gpu.csproj
samples/Qourex.FasterWhisper.NET.Samples.Maui.Cpu/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Qourex.FasterWhisper.NET.Samples.Maui.Cpu.csproj
samples/Qourex.FasterWhisper.NET.Samples.Maui.Gpu/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Qourex.FasterWhisper.NET.Samples.Maui.Gpu.csproj
samples/Qourex.FasterWhisper.NET.Samples.WinForms.Cpu/: MainForm.cs  Program.cs  Qourex.FasterWhisper.NET.Samples.WinForms.Cpu.csproj
samples/Qourex.FasterWhisper.NET.Samples.WinForms.Gpu/: MainForm.cs  Program.cs  Qourex.FasterWhisper.NET.Samples.WinForms.Gpu.csproj
src/Qourex.FasterWhisper.NET/: AudioProcessor.cs  AudioQualityReport.cs  BatchedInferencePipeline.cs  HallucinationDetector.cs  ModelDownloader.cs  NativeMethods.cs  Qourex.FasterWhisper.NET.csproj  SegmentMerger.cs  SileroVad.cs  StreamingMelExtractor.cs  SubtitleExporter.cs  TextRestorer.cs  TranscriptionDiagnostics.cs  TranscriptionTypes.cs  WhisperModel.cs  WhisperModelBuilder.cs  WhisperOptions.cs  WhisperSegment.cs  WhisperTokenizer.cs
src/Qourex.FasterWhisper.NET.Gpu/: CHANGELOG.md  Qourex.FasterWhisper.NET.Gpu.csproj  README.md  THIRD_PARTY_NOTICES.md
src/Qourex.FasterWhisper.Native/: CMakeLists.txt  qourex_fasterwhisper_native.cpp  qourex_fasterwhisper_native.h
tests/: coverlet.runsettings
tests/Qourex.FasterWhisper.NET.Tests/: AdaptiveBeamTests.cs  ArrayPoolTests.cs  AudioFormatTests.cs  AudioProcessorTests.cs  AudioQualityTests.cs  BatchedInferenceTests.cs  BestOfTests.cs  CleanSegmentTests.cs  ClipTimestampsTests.cs  DiagnosticsTests.cs  EdgeCaseTests.cs  FftRoundTripTests.cs  FluentBuilderTests.cs  HallucinationDetectorTests.cs  IntegrationTests.cs  ModelDownloaderTests.cs  NoiseGateDebugTests.cs  PromptResetTests.cs  Qourex.FasterWhisper.NET.Tests.csproj  SegmentMergerTests.cs  SegmentMetadataTests.cs  SubtitleExporterTests.cs  TextRestorerTests.cs  TokenizerEncodeTests.cs  TokenizerTests.cs  TranscriptionInfoTests.cs  VADTests.cs  VadOptionsExtTests.cs  WarmUpTests.cs  WhisperOptionsTests.cs
